--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Dev</title>
   <link rel="stylesheet" href="./styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div class="bg-intro">
+    <div id="info">
+      <header>
+        <div class="avatar">
+          <div class="user">
+            <img src="./assets/Foto perfil.png" alt="Foto de perfil de Martina Santos">
+            <img src="./assets/icons/Code.png" alt="Imagem de duas setas">
+          </div>
+        </div>
+        <p>
+          Hello World! Meu nome é <span>Martina Santos</span> e sou
+        </p>
+        <h1>Desenvolvedora Fullstack</h1>
+        <p>
+          Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+        </p>
+      </header>
+      <div class="tags">
+        <div>
+          <img src="./assets/icons/GitHub.svg" alt="Logo GitHub">
+          <span>GitHub</span>
+        </div>
+        <div>
+          <img src="./assets/icons/HTML.svg" alt="Logo HTML">
+          <span>HTML</span>
+        </div>
+        <div>
+          <img src="./assets/icons/CSS.svg" alt="Logo CSS">
+          <span>CSS</span>
+        </div>
+        <div>
+          <img src="./assets/icons/Javascript.svg" alt="Logo Javascript">
+          <span>Javascript</span>
+        </div>
+        <div>
+          <img src="./assets/icons/React.svg" alt="Logo React">
+          <span>React</span>
+        </div>
+        <div>
+          <img src="./assets/icons/Node.js.svg" alt="Logo Node.js">
+          <span>Node.js</span>
+        </div>
+      </div>
+      <div>
+        <img src="./assets/icons/CaretDoubleDown.svg" alt="Ícone de seta para baixo">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
