Trabalhos e serviços finalizados

--- a/index.html
+++ b/index.html
@@ -58,5 +58,84 @@
       </div>
     </div>
   </div>
+  <div class="bg-projects">
+    <main>
+      <header>
+        <h3>Meu trabalho</h3>
+        <h2>Veja os projetos em destaque</h2>
+      </header>
+      <div class="projects">
+        <figure>
+          <img src="./assets/tb-images/Thumbnail_Project-01.png" alt="">
+          <p>Travelgram</p>
+          <span>
+            Rede social onde as pessoas mostram os registros de suas viagens pelo mundo
+          </span>
+        </figure>
+        <figure>
+          <img src="./assets/tb-images/Thumbnail_Project-02.png" alt="">
+          <p>Tech News</p>
+          <span>
+            Homepage de um portal de notícias sobre a área de tecnologia
+          </span>
+        </figure>
+        <figure>
+          <img src="./assets/tb-images/Thumbnail_Project-03.png" alt="">
+          <p>Página de receita</p>
+          <span>
+            Página com o passo a passo de uma receita para cupcakes
+          </span>
+        </figure>
+        <figure>
+          <img src="./assets/tb-images/Thumbnail_Project-04.png" alt="">
+          <p>Zingen</p>
+          <span>
+            Landing Page completa e responsiva de um aplicativo de Karaokê
+          </span>
+        </figure>
+        <figure>
+          <img src="./assets/tb-images/Thumbnail_Project-05.png" alt="">
+          <p>Refund</p>
+          <span>
+            Um sistema para pedido e acompanhamento de reembolso 
+          </span>
+        </figure>
+        <figure>
+          <img src="./assets/tb-images/Thumbnail_Project-06.png" alt="">
+          <p>Página de turismo</p>
+          <span>
+            Página com as principais informações para quem quer viajar para Busan
+          </span>
+        </figure>
+      </div>
+    </main>
+  </div>
+  <div class="bg-services">
+    <div class="services">
+      <header>
+        <h3>Meus serviços</h3>
+        <h2>Como posso ajudar o seu negócio</h2>
+      </header>
+      <main>
+        <div class="services-list">
+          <div>
+            <img src="./assets/icons/Devices.svg" alt="Ícone de um computador e celular">
+            <h4>Websites e Aplicativos</h4>
+            <p>Desenvolvimento de interfaces</p>
+          </div>
+          <div>
+            <img src="./assets/icons/HardDrives.svg" alt="Ícone HD">
+            <h4>API e banco de dados</h4>
+            <p>Criação de serviços do sistema </p>
+          </div>
+          <div>
+            <img src="./assets/icons/Infinity.svg" alt="Ícone do infinito">
+            <h4>DevOps</h4>
+            <p>Gestão e infraestrutura da aplicação</p>
+          </div>
+        </div>
+      </main>
+    </div>
+  </div>
 </body>
 </html>
