--- a/index.html
+++ b/index.html
@@ -137,5 +137,54 @@
       </main>
     </div>
   </div>
+  <footer class="bg-footer">
+    <div class="contact">
+      <h4>Contato</h4>
+      <h2>Gostou do meu trabalho?</h2>
+      <p>
+        Entre em contato ou acompanhe as minhas redes sociais!
+      </p>
+    </div>
+    <div class="social-list">
+      <ul>
+        <li>
+          <a href="#" class="social-item">
+            <img src="./assets/icons/LinkedinLogo.svg" alt="Logo Linkedin">
+            <span>Linkedin</span>
+            <div>
+              <img src="./assets/icons/ArrowUpRight.svg" alt="Ícone de seta para cima">
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-item">
+            <img src="./assets/icons/InstagramLogo.svg" alt="Logo">
+            <span>Instagram</span>
+            <div>
+              <img src="./assets/icons/ArrowUpRight.svg" alt="Ícone de seta para cima">
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-item">
+            <img src="./assets/icons/GithubLogo.svg" alt="Logo GitHub">
+            <span>GitHub</span>
+            <div>
+              <img src="./assets/icons/ArrowUpRight.svg" alt="Ícone de seta para cima">
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="social-item">
+            <img src="./assets/icons/EnvelopeSimple.svg" alt="Ícone de envelope">
+            <span>E-mail</span>
+            <div>
+              <img src="./assets/icons/ArrowUpRight.svg" alt="Ícone de seta para cima">
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
